# SerBe

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Config.cmake  Makefile  README.md
dependencies/: hptl.cmake  netlib.cmake
include/: common.hpp  fileDiscover.hpp  fileHandler.hpp  hptl.h  hptl_config.h  hptl_deprecated.h  httpDomain.hpp  httpMethod.hpp  httpPath.hpp  httpReply.hpp  httpRequest.hpp  main.hpp  mmapHandler.hpp  netlib.h  path.hpp  pathHandler.hpp  serbeSocket.hpp  serbe_config.hpp.in  serverhttp.hpp  uriQuery.hpp
mk/: common.cmake  dependencies.cmake  modules.cmake  sites.cmake
src/: examples  fileDiscover.cpp  fileHandler.cpp  hptl.c  hptl_deprecated.c  httpDomain.cpp  httpPath.cpp  httpReply.cpp  httpRequest.cpp  main.cpp  mmapHandler.cpp  netlib_inline.c  path.cpp  pathHandler.cpp  serbeSocket.cpp  serverhttp.cpp
websites/example.org/: favicon.hex  index.html
